Edited gitignore to include office temp files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 #cache files
 *.asv
+
+*.tmp
+
+# Word temporary
+~$*.doc*
+
+# Excel temporary
+~$*.xls*
+
+# Excel Backup File
+*.xlk
+
+# PowerPoint temporary
+~$*.ppt*
